--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('./header.css');
+@import url('./footer.css');
 
 * {
     margin: 0;
     padding: 0;
 }
 
-header {
-    background-color: rgb(255, 158, 31);
-    text-align: center;
-    margin: auto;
-    font-family: kanit;
-    padding: 20px;
-    color: white;
+
+body {
+    background: url(../img/backgroundImage.png);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
 }
 
-nav a {
-    display: inline-block;
-    text-decoration: none;
-    color: white;
-    padding: 20px;
-}
 
-nav a:hover{
-    background: rgb(4, 99, 75);
-    border-radius: 50px;
-}
 
 .displayCards {
     display: flex;
@@ -32,14 +23,19 @@ nav a:hover{
     justify-content: center;
     text-align: center;
     align-items: center;
-    
 }
 
-.card{
+.cardCharacters{
     width: 300px;
     height: 400px;
     border: grey 2px solid;
     margin: 20px;
+    background-color: rgb(197, 95, 0);
+    color: white;
+}
+
+.cardPlanets {
+
 }
 
 .card img{
@@ -48,40 +44,12 @@ nav a:hover{
     margin: 0 auto;
 }
 
-footer {
-    margin-bottom: 0px;
+.card-img-top {
+    width: 150px;
+    height: auto;
     margin: 0 auto;
-    text-align: center;
-    background-color: rgb(0, 1, 37); 
-    color: white;
-    height: 18  0px;
-    font-family: kanit;
 }
 
-table{
-    margin: 0 auto;
-    padding: 20px;
-}
-
-td {
-    width: 100px;
-}
-
-table img{
-    width: 60px;
-    padding: 10px;
-}
-
-footer section{
-    padding: 25px;
-}
-
-footer a {
-    display: inline-block;
-    text-decoration: none;
-    color: white;
-    padding: 20px;
-}
 
 
 
