--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bona+Nova+SC:ital,wght@0,400;0,700;1,400&family=Itim&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('./header.css');
 @import url('./footer.css');
+@import url('./characters.css');
+@import url('./planets.css');
 
 * {
     margin: 0;
     padding: 0;
 }
-
 
 body {
     background: url(../img/backgroundImage.png);
@@ -14,8 +15,6 @@ body {
     background-attachment: fixed;
     background-size: cover;
 }
-
-
 
 .displayCards {
     display: flex;
@@ -25,30 +24,11 @@ body {
     align-items: center;
 }
 
-.cardCharacters{
-    width: 300px;
-    height: 400px;
-    border: grey 2px solid;
-    margin: 20px;
-    background-color: rgb(197, 95, 0);
-    color: white;
-}
 
-.cardPlanets {
 
-}
 
-.card img{
-    width: 150px;
-    height: auto;
-    margin: 0 auto;
-}
 
-.card-img-top {
-    width: 150px;
-    height: auto;
-    margin: 0 auto;
-}
+
 
 
 
