--- a/css/planets.css
+++ b/css/planets.css
@@ -3,6 +3,8 @@
     background-color: white;
     width: 300px;
     height: 650px;
+    min-height: 650px;
+    max-height: 650px;
     font-family: init;
 }
 
@@ -12,5 +14,12 @@
     max-width: 300px;
     max-height: 300px;
     margin: 0 auto;
+}
+
+.cardPlanets p{
+    height: 300px;
+    display: flex;
+    align-items: center;
+    text-align: center;
 }
 
